--- a/app/src/main/res/layout/shopping_lists_item.xml
+++ b/app/src/main/res/layout/shopping_lists_item.xml
@@ -12,7 +12,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground">
 
         <ImageView
             android:id="@+id/shopping_list_cart"
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:textStyle="bold"
+            android:text="@{shoppingList.listName}"
             app:layout_constraintStart_toEndOf="@+id/shopping_list_cart"
             app:layout_constraintTop_toTopOf="@+id/shopping_list_cart"
             tools:text="Shopping List" />
@@ -40,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:textSize="12sp"
+            app:shoppingListDate="@{shoppingList.date}"
             app:layout_constraintBottom_toBottomOf="@+id/shopping_list_cart"
             app:layout_constraintStart_toEndOf="@+id/shopping_list_cart"
             app:layout_constraintTop_toBottomOf="@id/shopping_list_name"
