--- a/app/src/main/res/layout/list_creation_dialog.xml
+++ b/app/src/main/res/layout/list_creation_dialog.xml
@@ -10,9 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditText"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/shoppingListName"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -20,7 +20,23 @@
             android:hint="@string/shopping_list_name_hint"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/shoppingListNameInput"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:maxLength="30"
+                android:maxLines="1"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/datePickerTooltip"
@@ -31,7 +47,7 @@
             app:layout_constraintBottom_toTopOf="@+id/datePicker"
             app:layout_constraintEnd_toEndOf="@+id/datePicker"
             app:layout_constraintStart_toStartOf="@+id/datePicker"
-            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
+            app:layout_constraintTop_toBottomOf="@+id/shoppingListName" />
 
         <DatePicker
             android:id="@+id/datePicker"
