--- a/app/src/main/res/layout/shopping_lists_item.xml
+++ b/app/src/main/res/layout/shopping_lists_item.xml
@@ -12,8 +12,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?attr/selectableItemBackground">
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:paddingBottom="16dp">
 
         <ImageView
             android:id="@+id/shopping_list_cart"
