Changed structure of the model and managed to put a grocery list on the screen (if list has any)

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,7 +22,7 @@
         tools:layout="@layout/grocery_list">
 
         <argument
-            android:name="groceriesList"
-            app:argType="com.example.shoppinglist.model.appmodel.ShoppingList"/>
+            android:name="groceriesListId"
+            app:argType="long"/>
     </fragment>
 </navigation>
