--- a/app/src/main/res/layout/groceries_list_item.xml
+++ b/app/src/main/res/layout/groceries_list_item.xml
@@ -49,5 +49,16 @@
             app:layout_constraintTop_toBottomOf="@id/grocery_name"
             tools:text="10" />
 
+        <ImageView
+            android:id="@+id/delete_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:background="?attr/selectableItemBackground"
+            android:src="@drawable/ic_baseline_delete_24"
+            app:layout_constraintBottom_toBottomOf="@+id/grocery_basket"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/grocery_basket" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
