--- a/app/src/main/res/layout/groceries_list_fragment.xml
+++ b/app/src/main/res/layout/groceries_list_fragment.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
+        android:visibility="invisible"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
