--- a/app/src/main/res/layout/shopping_lists_fragment.xml
+++ b/app/src/main/res/layout/shopping_lists_fragment.xml
@@ -23,6 +23,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />
